# c1_pscr

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
deploy/: c1_app.conf.example  c1_app.service  c1_app.timer  grid.csv.example
src/: main.c  main_helpers.c  main_helpers.h
src/buffer/: shared_buffer.c  shared_buffer.h
src/config/: config.c  config.h
src/grid/: grid.c  grid.h  grid_loader.c  grid_loader.h
src/logger/: logger.c  logger.h
src/mqtt/: mqtt_publisher.c  mqtt_publisher.h
src/pipeline/: pipeline.c  pipeline.h
src/weather/: weather_client.c  weather_client.h  weather_client_internal.h  weather_parser.c  weather_parser.h  weather_serializer.c  weather_serializer.h  weather_transformer.c  weather_transformer.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  all_integration_tests_main.c  test_buffer_to_mqtt.c  test_buffer_to_mqtt_runner.c  test_http_to_buffer.c  test_http_to_buffer_runner.c  test_pipeline_full.c  test_pipeline_full_runner.c
tests/mocks/: CMakeLists.txt  mock_http.c  mock_http.h  mock_mqtt.c  mock_mqtt.h
tests/unit/: CMakeLists.txt  all_unit_tests.c  test_grid.c  test_grid_runner.c  test_weather_client.c  test_weather_client_runner.c  test_weather_parser_runner.c  test_weather_transformer.c  test_weather_transformer_runner.c
tests/unit/buffer/: test_shared_buffer.c  test_shared_buffer_runner.c
tests/unit/config/: test_config.c  test_config_runner.c
tests/unit/grid/: test_grid.c  test_grid_loader.c  test_grid_loader_runner.c  test_grid_runner.c
tests/unit/helpers/: test_main_helpers.c  test_main_helpers_runner.c
tests/unit/mqtt/: test_mqtt_publisher.c  test_mqtt_publisher_runner.c
tests/unit/pipeline/: test_pipeline.c  test_pipeline_runner.c
tests/unit/weather/: test_weather_client.c  test_weather_client_internal.c  test_weather_parser.c  test_weather_parser_runner.c  test_weather_serializer.c  test_weather_serializer_runner.c  test_weather_transformer.c  test_weather_transformer_runner.c
tools/: integration_setup.sh  mosquitto_test.conf
tools/fake_server/: server.py
